Change configuration from traefik file

--- a/traefik.yml
+++ b/traefik.yml
@@ -3,13 +3,15 @@ global:
   sendAnonymousUsage: true
 
 api:
-  dashboard: true
   insecure: true
 
 entryPoints:
-  http:
+  web:
     address: ":80"
-      
+    http:
+      middlewares:
+        - user-auth@file
+         
 log:
 
   level: DEBUG
