--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     # The official v2 Traefik docker image
     image: traefik:v2.5
     # Enables the web UI and tells Traefik to listen to docker
-    command: --api.insecure=true --providers.docker # Stop automatic Traefik port expose --providers.docker.exposedByDefault=false
+    command: --api.insecure=true --providers.docker #--providers.docker.exposedByDefault=false
     
     ports:
       # The HTTP port
@@ -15,6 +15,7 @@ services:
     volumes:
       # So that Traefik can listen to the Docker events
       - /var/run/docker.sock:/var/run/docker.sock
+      - C:\docker\logs:/datadocker/logs
       - C:\docker\traefik\traefik.yml:/etc/traefik/traefik.yml:ro
       - C:\docker\traefik\config.yml:/etc/traefik/config.yml:ro
 # We will need this on part 4.5
@@ -37,7 +38,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.started.rule=Host(`started.docker.localhost`)"
-      - "traefik.http.routers.started.middlewares=user-auth@file,test-ratelimit@file,test-compress@file,test-ipwhitelist@file"
+      #- "traefik.http.routers.started.middlewares=user-auth@file,test-ratelimit@file,test-compress@file,test-ipwhitelist@file"
       - "traefik.http.services.started.loadbalancer.server.port=80"
       
 
@@ -50,7 +51,7 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.catapp.rule=Host(`catapp.docker.localhost`)"
       - "traefik.http.routers.catapp.service=catapp"
-      - "traefik.http.routers.catapp.middlewares=user-auth@file,test-ratelimit@file"
+      #- "traefik.http.routers.catapp.middlewares=user-auth@file,test-ratelimit@file"
       - "traefik.http.services.catapp.loadbalancer.server.port=5000"
 
 #Part 4 Middleware
