Change configuration for ipwhitelist middlewares

--- a/traefik.yml
+++ b/traefik.yml
@@ -11,6 +11,8 @@ entryPoints:
     http:
       middlewares:
         - user-auth@file
+        - test-ratelimit@file
+        - test-ipwhitelist@file
          
 log:
 
